using clipse as clipboard manager

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -47,7 +47,16 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & swaync & hyprpaper
+exec-once = waybar & swaync & hyprpaper clipse -listen
+
+
+
+# clipse
+windowrulev2 = float,class:(clipse) # ensure you have a floating window class set if you want this behavior
+windowrulev2 = size 622 652,class:(clipse) # set the size of the window as necessary
+
+
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -67,10 +76,10 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 3
-    gaps_out = 5
+    gaps_in = 5
+    gaps_out = 8
 
-    border_size = 2
+    border_size = 0
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
@@ -102,8 +111,8 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 2
+        passes = 3
 
         vibrancy = 0.1696
     }
@@ -190,12 +199,13 @@ bind = $mainMod, return, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, R, exec, ~/.config/waybar/launch.sh
 # bind = $mainMod, A, exec ~/.config/hypr/changewallpaper.sh
+bind = SUPER, V, exec, kitty --class clipse -e 'clipse'
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -216,8 +226,8 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 
-bind = ALT, P, exec, hyprshot -m output
-bind = SHIFT, P, exec, hyprshot -m region
+bind = ALT, H, exec, ~/.local/bin/hyprshot -m output
+bind = $mainMod, H, exec, ~/.local/bin/hyprshot -m region
 bind = $mainMod, L, exec, hyprlock
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
@@ -260,6 +270,9 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Power Menu using wofi
 bind = $mainMod, I, exec, /usr/local/bin/power-menu.sh
+
+# Network Menu using wofi
+bind = $mainMod, N, exec, ~/.config/wofi/wofi-wifi.sh
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
