solved multiple wofi menu issue

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -200,7 +200,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating,
-bind = $mainMod, space, exec, $menu
+bind = $mainMod, space, exec, pkill wofi || $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, R, exec, ~/.config/waybar/launch.sh
