layerrule for wofi

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -205,7 +205,8 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, R, exec, ~/.config/waybar/launch.sh
 # bind = $mainMod, A, exec ~/.config/hypr/changewallpaper.sh
-bind = SUPER, V, exec, kitty --class clipse -e 'clipse'
+bind = $mainMod, V, exec, kitty --class clipse -e 'clipse'
+bind = $mainMod, B, exec, pkill wofi || ~/.config/wofi/bluetooth_menu.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -269,10 +270,10 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Power Menu using wofi
-bind = $mainMod, I, exec, /usr/local/bin/power-menu.sh
+bind = $mainMod, I, exec, pkill wofi || /usr/local/bin/power-menu.sh
 
 # Network Menu using wofi
-bind = $mainMod, N, exec, ~/.config/wofi/wofi-wifi.sh
+bind = $mainMod, N, exec, pkill wofi || ~/.config/wofi/wofi-wifi.sh
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -292,3 +293,7 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+
+layerrule = animation popin 90%, wofi
+# layerrule = dimaround, wofi
